# barcode-sdk

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: test.yml
01_data/: data_preparation.py  dataset.yaml
02_preannotation/: convert_to_yolo.py  preannotation_system.py
03_training/: evaluate.py  optimize_threshold.py  train.py
04_export/: export_models.py  test_export.py
05_deployment/cpp/: BarcodeDetector.cpp  BarcodeDetector.def  BarcodeDetector.h  CMakeLists.txt  dllmain.cpp
05_deployment/python/: barcode_detector.py
06_test/: CMakeLists.txt  generate_test_images.py  test_dll.cpp  test_python.py
06_test/test_data/: README.md
06_test/test_images/: README.md
docs/: api_reference.md  deployment_guide.md  performance_report.md
sample_data/: README.md
